# fopf-print-quantum

./: .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  pg-up.sh  pyproject.toml  yookassa_example.ipynb
.github/workflows/: main.yaml
db/: init_quantum.sql
hooks/: pre-commit
src/quantum/: bot.py  cli.py  keyboards.py  settings.py  web.py  workers.py
src/quantum/all_settings/: dev.py  prod.py
src/quantum/bot_user_flow/: refill_balance_flow.py  registration_flow.py  set_printing_parameters_flow.py
src/quantum/connectors/: db_balance.py  db_payments.py  db_printing.py  db_users.py  http_yookassa.py  mb_printing_queue.py
src/quantum/core/: __init__.py  _pg_connector_impl.py  bot_utils.py  db.py  exceptions.py  globals.py
src/quantum/entities/: payments.py  printing.py  users.py  web.py
src/quantum/services/: balance.py  client_notification.py  payments.py  printing.py  users.py
src/quantum/settings/: __init__.py  __init__.pyi  _dev.py  _prod.py
tests/: conftest.py  mock_bot.py  test_bot_register.py  test_bot_start.py  test_db_connected.py  test_db_users.py  test_mb_printing_queue.py  test_pytest_works.py  test_tg_bot.py
