[tool.poetry]
name = "fopf-print-quantum"
version = "0.1.0"
description = "Серверная часть проекта fopf-print"
authors = ["cat-magician"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
