[tool.poetry]
name = "quantum"
version = "0.1.0"
description = "Серверная часть проекта fopf-print"
authors = ["cat-magician"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
aiogram = "^3.3.0"
click = "^8.1.7"
mypy = "^1.8.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
yookassa = "^3.0.0"
decorator = "^5.1.1"
types-decorator = "^5.1.8.20240106"
docker = "^7.0.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quantum = 'quantum.cli:cli'
